Added card counter, continued UDP broadcast, added join support

--- a/src/MoepClient/GUI/InitPanel.form
+++ b/src/MoepClient/GUI/InitPanel.form
@@ -78,6 +78,9 @@
             <StringItem index="0" value="Ausw&#xe4;hlen..."/>
           </StringArray>
         </Property>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[89, 20]"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox1ActionPerformed"/>
