--- a/src/MoepClient/GUI/InitPanel.form
+++ b/src/MoepClient/GUI/InitPanel.form
@@ -77,8 +77,9 @@
     <Component class="javax.swing.JComboBox" name="jComboBox1">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="1">
+          <StringArray count="2">
             <StringItem index="0" value="Ausw&#xe4;hlen..."/>
+            <StringItem index="1" value="Online spielen"/>
           </StringArray>
         </Property>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
